--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -91,7 +91,7 @@
   }
 
   @media screen and (max-height: 500px) {
-    background-position: 50% 15px, 50% 50%;
+    background-position: 50% 20px, 50% 50%;
     background-size: auto 15%, cover;
   }
 }
