--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -8,11 +8,6 @@
   text-align: center;
 }
 
-/* maybe add this to responsive elements */
-.animated {
-  transition: 0.5s ease-out;
-}
-
 @import "variables";
 @import "mixins";
 
